<resources>
    <string name="app_name">NAPR</string>
    <string name="title_activity_splashscreen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="app_vendor">INDIAN COAST GUARD</string>
    <string name="new_ticket">New Ticket</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_create_ticket">Create Ticket</string>
    <string name="title_fragment_view_ticket">View Ticket</string>
    <string name="title_fragment_contracts">Contracts</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="penalty">Penalty</string>
    <string name="title_fragment_initiate_penalty">Initiate Penalty</string>
    <string name="title_fragment_view_penalty">View Penalty</string>
    <string name="contract">Contract</string>
    <string name="title_fragment_create_contract">Create Contract</string>
    <string name="title_fragment_contractor_sla">Contractor SLA</string>
    <string name="title_fragment_role_configuration">Role Configuration</string>
    <string name="title_fragment_view_vendor_details">View Vendor Details</string>
    <string name="equipment">Equipment</string>
    <string name="title_fragment_add_equipment">Add Equipment</string>
    <string name="title_fragment_view_equipment">View Equipment</string>
    <string name="vendors">Vendors</string>
    <string name="title_fragment_view_sla">View SLA</string>
    <string name="tickets">Tickets</string>
    <string name="smac">SMAC</string>
    <string name="ticket_priority">Ticket Priority</string>
    <string name="title_fragment_vendors">Vendors</string>
    <string name="attached_image_text">Image attached</string>
    <string name="title">Title</string>
    <string name="title_fragment_equipments">Equipments</string>
    <string name="search">Search</string>
    <string name="contract_name">Contract Name</string>
    <string name="unit">Unit</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="response_time_in_days">Response Time (In Days)</string>
    <string name="service_type">Service Type</string>
    <string name="equipment_serial_no">Equipment Serial No</string>
    <string name="equipment_located_at">Equipment Located at</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_number">Contact Person Number</string>
    <string name="description">Description</string>
    <string name="image_optional">Image (Optional)</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="attachments">Attachments</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="contact_no">Contact Number</string>
    <string name="email">Email</string>
    <string name="type">Type</string>
    <string name="subtype">Subtype</string>
    <string name="model">Model</string>
    <string name="ref_no">Reference No</string>
    <string name="initiate_penalty">Initiate Penalty</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="ticket_date">Ticket Date</string>
    <string name="last_ticket_update">Last Ticket Update</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="nac_ho_date">NAC H/o Date</string>
    <string name="pet_reg">PET REGISTRATION</string>
    <string name="pet_ver">OTP Verification </string>
    <string name="mob_app">MOBILE APP</string>
    <string name="login_signup">Login / Signup</string>
    <string name="Cancel">Cancel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_dog_photos">"Add Pet's Photos"</string>
    <string name="add_hfp">House No/Flat No/Plot No <font color="#FF0000"> *</font></string>
    <string name="add_name">Village Name <font color="#FF0000"> *</font></string>
    <string name="add_type">Address Type<font color="#FF0000"> *</font></string>
    <string name="add_upload_documents">Upload Documents</string>
    <string name="address_line1">Address line 1</string>
    <string name="addresses">Address<font color="#FF0000"> *</font></string>
    <string name="age">Age</string>
    <string name="age_dog">Pet Age</string>
    <string name="alert_title"><u>Noida Municipal Corporation</u></string>
    <string name="amount">Amount</string>
    <string name="api_base_url">http://petregistration.mynoida.in/webapi/</string>
    <string name="api_key">Basic VVNFUl9DTElFTlRfQVBQOnBhc3N3b3Jk</string>
    <string name="app_name_verfiy">Verify OTP</string>
    <string name="app_title">नोएडा अथॉरिटी</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application">Application</string>
    <string name="application_details">Application Details</string>
    <string name="application_form">Application Form</string>
    <string name="application_status">Application Status :</string>
    <string name="axis_bank">AXIS</string>
    <string name="back_button_warning">"Please don't hit the back button until the action is complete."</string>
    <string name="bank_prompt">Select your Bank</string>
    <string name="block">Block <font color="#FF0000"> *</font></string>
    <string name="block_list">Block-List <font color="#FF0000"> *</font></string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breed">Breed</string>
    <string name="breeds">Breed<font color="#FF0000"> *</font></string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this transaction?</string>
    <string name="cardType_prompt">Select Card Type</string>
    <string name="card_number_format">xxxx-xxxx-xxxx-xxxx</string>
    <string name="cb_ac_debited_twice">* Your account may be debited twice if you retry.</string>
    <string name="cb_approve_otp">Approve</string>
    <string name="cb_authenticate_with">Select an option for Faster Payment</string>
    <string name="cb_b_cancel">Cancel</string>
    <string name="cb_bank_logo">Bank LOGO</string>
    <string name="cb_bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="cb_btn_action">btn_action</string>
    <string name="cb_btn_text">btn_text</string>
    <string name="cb_button">Button</string>
    <string name="cb_cancel">cancel</string>
    <string name="cb_cancel_transaction">Cancel Transaction</string>
    <string name="cb_card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="cb_catchAll_success_msg">catchAllSuccessMsg</string>
    <string name="cb_check_visibility_cajs">checkVisibilityCatchAllJSCall</string>
    <string name="cb_checkbox">checkbox</string>
    <string name="cb_choose">choose</string>
    <string name="cb_confirm_transaction">Confirm Transaction</string>
    <string name="cb_debug_enabled">cb_debug_enabled</string>
    <string name="cb_detect_bank">detectBank</string>
    <string name="cb_detect_otp">detectOtp</string>
    <string name="cb_enter_caps_otp">Enter OTP</string>
    <string name="cb_enter_manually">Enter OTP Manually</string>
    <string name="cb_enter_otp">enterOTP</string>
    <string name="cb_enter_otp_c">Enter OTP</string>
    <string name="cb_enter_pin">enterPIN</string>
    <string name="cb_error">error</string>
    <string name="cb_error_title">ERROR_TITLE</string>
    <string name="cb_fill_otp">fillOTP</string>
    <string name="cb_find_new_otp">findNewOtp</string>
    <string name="cb_find_otp">findOtp</string>
    <string name="cb_hide">hide</string>
    <string name="cb_incorrect_OTP_2">incorrectOTP</string>
    <string name="cb_incorrect_otp_e">Incorrect OTP!</string>
    <string name="cb_incorrect_password">Incorrect Password</string>
    <string name="cb_incorrect_pin">incorrectPIN</string>
    <string name="cb_init">init</string>
    <string name="cb_invalid_vpa">Invalid VPA</string>
    <string name="cb_logs_level">cb_logs_level</string>
    <string name="cb_nb_image">net banking image</string>
    <string name="cb_no_internet">NO INTERNET CONNECTIVITY</string>
    <string name="cb_no_internet_error">Oops.. something bad happened</string>
    <string name="cb_otp">otp</string>
    <string name="cb_otp_received">OTP Received</string>
    <string name="cb_password">PASSWORD</string>
    <string name="cb_password_value">Password</string>
    <string name="cb_payu_icon">PayU icon</string>
    <string name="cb_payu_response">payu_response</string>
    <string name="cb_payu_review_order">Review Order</string>
    <string name="cb_pin">pin</string>
    <string name="cb_please_wait">Please Wait</string>
    <string name="cb_populate_user_id">populate_user_id</string>
    <string name="cb_powered_by">Powered by</string>
    <string name="cb_process_otp">process_otp</string>
    <string name="cb_process_request">Processing Your Request</string>
    <string name="cb_pwd_btn">pwd_btn</string>
    <string name="cb_receive_sms">Did you receive a SMS from your bank?</string>
    <string name="cb_regen_otp">regenerate_otp</string>
    <string name="cb_regenerate">regenerate</string>
    <string name="cb_regenerate_otp">Regenerate OTP</string>
    <string name="cb_regenerate_otp_text">It is taking long.You may…</string>
    <string name="cb_register">register</string>
    <string name="cb_register_for_pin">REGISTER FOR PIN</string>
</resources>